--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 
           <!-- [BEGIN] PAYMENT DATA ROW -->
           <div class="payment-data-row">
-            <!-- [BEGIN] FULL CARD DATA FORM SECTION   -->
             <div class="payment-data-fields-container">
+              <!-- [BEGIN] FULL CARD DATA FORM SECTION   -->
               <div class="input-container">
                 <label for="card.number" class="input-label">Card number</label>
                 <input id="card.number" name="card.number" class="text-input has-error" type="text"
@@ -97,10 +97,66 @@
                 <input type="checkbox" id="saveCard" />
                 <label for="saveCard">Save Card</label>
               </div>
+              <!-- [END] FULL CARD DATA FORM SECTION   -->
+
+              <!-- [BEGIN] CUSTOM FIELD FORM SECTION   -->
+              <div class="input-container">
+                <label for="cashier.customField" class="input-label">Account ID</label>
+                <input id="cashier.customField" name="cashier.customField" class="text-input has-error" type="text"
+                  placeholder="123456789" />
+                <div class="error">Invalid Acount id</div>
+              </div>
+              <!-- [END] CUSTOM FIELD FORM SECTION   -->
+
+              <!-- [BEGIN] SAVED DATA FORM SECTION   -->
+              <div>
+                <div class="select mb-8em" tabindex="1">
+                  <input class="options-select option-input" name="selectors" type="radio" id="opt1" checked>
+                  <label for="opt1" class="option"><div class="option-content-conteiner">
+                    <p>123456789</p>
+                    <div class="delete-icon"><img src="img/delete-icon.svg" /></div>
+                  </div></label>
+                  <input class="options-select option-input" name="selectors" type="radio" id="opt2">
+                  <label for="opt2" class="option"><div class="option-content-conteiner">
+                    <p>222333444</p>
+                    <div class="delete-icon"><img src="img/delete-icon.svg" /></div>
+                  </div></label>
+                  <input class="options-select option-input" name="selectors" type="radio" id="opt3">
+                  <label for="opt3" class="option"><div class="option-content-conteiner">
+                    <p>123123123</p>
+                    <div class="delete-icon"><img src="img/delete-icon.svg" /></div>
+                  </div></label>
+                  <input class="options-select option-input" name="selectors" type="radio" id="opt4">
+                  <label for="opt4" class="option" checked>
+                    <div class="option-content-conteiner">
+                      <p>44444444444</p>
+                      <div class="delete-icon"><img src="img/delete-icon.svg" /></div>
+                    </div>
+                  </label>
+                </div>
+                <div class="add-new">
+                  <span>+</span><p class="text-new">Use different account number</p>
+                </div>
+              </div>
+              <!-- [END] SAVED DATA FORM SECTION   -->
             </div>
-            <!-- [END] FULL CARD DATA FORM SECTION   -->
           </div>
           <!-- [END] PAYMENT DATA ROW -->
+
+          <!-- [BEGIN] SUBMIT PAYMENT ROW -->
+          <div class="submit-row">
+            <div class="submit-container">
+              <button class="submit-button mb-8em">Submit</button>
+              <a class="cancel-link mb-8em" href="#">Cancel</a>
+              <div class="cards-brands mb-8em">
+                <img src="img//cc-images.svg" />
+              </div>
+              <div class="pci-logo-wrapper mb-8em">
+                <img class="pci-logo" src="img/pci-dss-logo.svg" />
+              </div>
+            </div>
+          </div>
+          <!-- [END] SUBMIT PAYMENT ROW -->
           </form>
         </div>
       </div>
@@ -113,13 +169,13 @@
         data-errors="" data-customField="fullCard" data-logo="img/bigwallet.svg">
         <img src="img/bigwallet.svg">
         <p>Credit Card</p>
-      </div>
+      </!DOCTYPE>
       <div id="method2" class="card" data-amount="" data-predefinedamounts="20:30:40" data-defaultamount="10"
         data-currency="EUR" data-customPaymentMethod="CREDTICARD-2" data-errors="" data-customField="cardPan">
         <img src="img/bigwallet.svg">
         <p>Custom card Method</p>
-      </div>
-      </div>
+      </!DOCTYPE>
+      </!DOCTYPE>
       <div id="method2" class="card" data-amount="" data-predefinedamounts="20:30:40" data-defaultamount="10"
         data-currency="EUR" data-customPaymentMethod="MOBILEPAY" data-errors="" data-customField="accountId">
         <img src="img/bigwallet.svg">
