Fix wierd stuff from previous commit

--- a/index.html
+++ b/index.html
@@ -112,20 +112,26 @@
               <div>
                 <div class="select mb-8em" tabindex="1">
                   <input class="options-select option-input" name="selectors" type="radio" id="opt1" checked>
-                  <label for="opt1" class="option"><div class="option-content-conteiner">
-                    <p>123456789</p>
-                    <div class="delete-icon"><img src="img/delete-icon.svg" /></div>
-                  </div></label>
+                  <label for="opt1" class="option">
+                    <div class="option-content-conteiner">
+                      <p>123456789</p>
+                      <div class="delete-icon"><img src="img/delete-icon.svg" /></div>
+                    </div>
+                  </label>
                   <input class="options-select option-input" name="selectors" type="radio" id="opt2">
-                  <label for="opt2" class="option"><div class="option-content-conteiner">
-                    <p>222333444</p>
-                    <div class="delete-icon"><img src="img/delete-icon.svg" /></div>
-                  </div></label>
+                  <label for="opt2" class="option">
+                    <div class="option-content-conteiner">
+                      <p>222333444</p>
+                      <div class="delete-icon"><img src="img/delete-icon.svg" /></div>
+                    </div>
+                  </label>
                   <input class="options-select option-input" name="selectors" type="radio" id="opt3">
-                  <label for="opt3" class="option"><div class="option-content-conteiner">
-                    <p>123123123</p>
-                    <div class="delete-icon"><img src="img/delete-icon.svg" /></div>
-                  </div></label>
+                  <label for="opt3" class="option">
+                    <div class="option-content-conteiner">
+                      <p>123123123</p>
+                      <div class="delete-icon"><img src="img/delete-icon.svg" /></div>
+                    </div>
+                  </label>
                   <input class="options-select option-input" name="selectors" type="radio" id="opt4">
                   <label for="opt4" class="option" checked>
                     <div class="option-content-conteiner">
@@ -135,7 +141,8 @@
                   </label>
                 </div>
                 <div class="add-new">
-                  <span>+</span><p class="text-new">Use different account number</p>
+                  <span>+</span>
+                  <p class="text-new">Use different account number</p>
                 </div>
               </div>
               <!-- [END] SAVED DATA FORM SECTION   -->
@@ -169,13 +176,12 @@
         data-errors="" data-customField="fullCard" data-logo="img/bigwallet.svg">
         <img src="img/bigwallet.svg">
         <p>Credit Card</p>
-      </!DOCTYPE>
+      </div>
       <div id="method2" class="card" data-amount="" data-predefinedamounts="20:30:40" data-defaultamount="10"
         data-currency="EUR" data-customPaymentMethod="CREDTICARD-2" data-errors="" data-customField="cardPan">
         <img src="img/bigwallet.svg">
         <p>Custom card Method</p>
-      </!DOCTYPE>
-      </!DOCTYPE>
+      </div>
       <div id="method2" class="card" data-amount="" data-predefinedamounts="20:30:40" data-defaultamount="10"
         data-currency="EUR" data-customPaymentMethod="MOBILEPAY" data-errors="" data-customField="accountId">
         <img src="img/bigwallet.svg">
