--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <title>Cashier V2</title>
 
   <link rel="stylesheet" type="text/css" href="style.css">
-  <script type="text/javascript" src="main.js"></script>
 </head>
 
 <body>
@@ -69,6 +68,8 @@
     </section>
     <!-- [END] PAYMENT METHODS GRID   -->
   </main>
+  <script type="text/javascript" src="cleave.min.js"></script>
+  <script type="text/javascript" src="main.js"></script>
 </body>
 
 </html>
