--- a/index.html
+++ b/index.html
@@ -20,50 +20,46 @@
     <section id="methodsContainer" class="flex-container">
       <div id="method1" class="card" data-method="CREDITCARD" data-amountrange="10 EUR to 100 EUR" data-selected=true
         data-amount="" data-error="Amount out of range" data-predefinedamounts="20:30:40" data-defaultamount="10" data-currency="EUR"
-        data-custompaymentmethod="" data-errors="" data-customfield="fullCard" data-logo="img/bigwallet.svg"
+        data-custompaymentmethod="" data-errors="" data-customfield="fullCard" data-logo="img/1.png"
         data-customfieldvalue=[1,3,4,5] data-amountlabel="Amount">
-        <img src="img/bigwallet.svg">
+        <img src="img/1.png">
         <p>Credit Card</p>
       </div>
       <div id="method2" class="card" data-amount="" data-predefinedamounts="20:30:40" data-defaultamount="10"
-        data-currency="EUR" data-amountlabel="Amount" data-custompaymentmethod="CREDTICARD-2" data-errors="" data-customField="cardPan">
-        <img src="img/bigwallet.svg">
+        data-currency="EUR" data-amountlabel="Amount" data-custompaymentmethod="CREDTICARD-2" data-errors="" data-customfield="cardPan" data-logo="img/2.png">
+        <img src="img/2.png">
         <p>Custom card Method</p>
       </div>
-      <div id="method2" class="card" data-amount="" data-predefinedamounts="20:30:40" data-defaultamount="10"
-        data-currency="EUR" data-amountlabel="Amount" data-custompaymentmethod="MOBILEPAY" data-errors="" data-customField="accountId">
-        <img src="img/bigwallet.svg">
+      <div id="method2" class="card" data-amount="" data-predefinedamounts="20:30:40" data-defaultamount="10" data-logo="img/3.png"
+        data-currency="EUR" data-amountlabel="Amount" data-custompaymentmethod="MOBILEPAY" data-errors="" data-customfield="accountId">
+        <img src="img/3.png">
         <p>Custom Mobile</p>
       </div>
-      <div id="method2" class="card" data-amount="" data-method="ANOTHERMETHOD" data-predefinedamounts="20:30:40"
-        data-defaultamount="10" data-amountlabel="Amount" data-currency="EUR" data-custompaymentmethod="" data-errors="" data-customField="">
-        <img src="img/bigwallet.svg">
+      <div id="method2" class="card" data-amount="" data-method="ANOTHERMETHOD" data-predefinedamounts="20:30:40" data-logo="img/4.png"
+        data-defaultamount="10" data-amountlabel="Amount" data-currency="EUR" data-custompaymentmethod="" data-errors="" data-customfield="">
+        <img src="img/4.png">
         <p>Regular</p>
       </div>
       <div id="method2" class="card" data-amountlabel="Amount" data-amount="" data-predefinedamounts="20:30:40" data-defaultamount="10"
-        data-currency="EUR" data-custompaymentmethod="CREDTICARD-3" data-errors="1" data-customField="fullCard">
-        <img src="img/bigwallet.svg">
+        data-currency="EUR" data-custompaymentmethod="CREDTICARD-3" data-errors="1" data-customfield="phone" data-logo="img/5.png">
+        <img src="img/5.png">
         <p>Custom card - error</p>
       </div>
-      <div id="method5" class="card">
-        <img src="img/bigwallet.svg">
+      <div id="method5" class="card" data-logo="img/6.png">
+        <img src="img/6.png">
         <p>Method 5</p>
       </div>
-      <div id="method6" class="card">
-        <img src="img/bigwallet.svg">
+      <div id="method6" class="card" data-logo="img/7.png">
+        <img src="img/7.png">
         <p>Method 6</p>
       </div>
-      <div id="method7" class="card">
-        <img src="img/bigwallet.svg">
+      <div id="method7" class="card" data-logo="img/8.png">
+        <img src="img/8.png">
         <p>Method 7</p>
       </div>
-      <div id="method8" class="card">
-        <img src="img/bigwallet.svg">
+      <div id="method8" class="card" data-logo="img/9.png">
+        <img src="img/9.png">
         <p>Method 8</p>
-      </div>
-      <div id="method9" class="card">
-        <img src="img/bigwallet.svg">
-        <p>Method 9</p>
       </div>
     </section>
     <!-- [END] PAYMENT METHODS GRID   -->
